core: setup project files

--- a/BlasII.Randomizer.Multiworld/BlasII.Randomizer.Multiworld.csproj
+++ b/BlasII.Randomizer.Multiworld/BlasII.Randomizer.Multiworld.csproj
@@ -8,20 +8,22 @@
     <Product>Multiworld</Product>
     <Authors>Damocles</Authors>
     <Company>Damocles</Company>
-    <Description>A mod for Blasphemous 2</Description>
+    <Description>A multiworld client that allows the Randomizer to connect to AP</Description>
     <Version>0.1.0</Version>
     
     <TargetName>Multiworld</TargetName>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetName).xml</DocumentationFile>
-    <RepositoryUrl>https://github.com/Example</RepositoryUrl>
+    <RepositoryUrl>https://github.com/BrandenEK/BlasII.Randomizer.Multiworld</RepositoryUrl>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlasII.Framework.Menus" Version="0.3.0" />
     <PackageReference Include="BlasII.GameLibs" Version="2.2.0" />
-    <PackageReference Include="BlasII.ModdingAPI" Version="0.1.0" />
+    <PackageReference Include="BlasII.ModdingAPI" Version="2.0.0" />
+    <PackageReference Include="BlasII.Randomizer" Version="2.3.0" />
   </ItemGroup>
 
   <Target Name="Development" AfterTargets="PostBuildEvent">
