--- a/BlasII.Randomizer.Multiworld/BlasII.Randomizer.Multiworld.csproj
+++ b/BlasII.Randomizer.Multiworld/BlasII.Randomizer.Multiworld.csproj
@@ -20,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Archipelago.MultiClient.Net" Version="6.6.0" />
     <PackageReference Include="BlasII.Framework.Menus" Version="0.3.0" />
     <PackageReference Include="BlasII.GameLibs" Version="2.2.0" />
     <PackageReference Include="BlasII.ModdingAPI" Version="2.0.0" />
